force-app/main/default/objects/Project_Resources__c/listViews/Rol_Recurso_Horas_Reporte_general.listView-meta.xml
<ListView>
    <fullName>Rol_Recurso_Horas_Reporte_general</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>RequieredHours__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rol/Recurso Horas Reporte general</label>
</ListView>